﻿1.1.4
+ Added new option for command line utility "/cfg:<path>" to perform conversions using external configuration file
* Fixed installer problem on x86 systems downloading VCRedist x86 twice
* The shell extension no longer looks for a converter path, as it's a COM object now
* Returned registration of shell extension for 32 bit programs on 64 bit machine that was broken in prev. version
* Moved conversion options configuration to different file defsetting.xml that will be located in user profile, if not exist will be copied there from program folder or created from defaults. This file will be used by all converters either command line , GUI or COM.
* When creating configuration from defaults it will not have font settings included
* Changed to use innosetup 5.5.3
* Doubled size of the single LOG file to reduce number of log files created
* Fixed some issues with localization
* Fixed a bug when book ID contained a characters not fit for CSS font family name and decoration enabled - resulted in CSS fonts (including Cyrillic) not being applied
* Fixed loading images with invalid content type values set as generated by some converters (e.g. Any2FB application/octet-stream etc.)


1.1.3
+ Added settings.cmd file and shortcut to configure command line converter settings
+ Added "succeeded" message at the end of FBE export
* Fixed crash when browse for font button was used from command line utility settings

1.1.2
+ Added text  and image to about dialog to FB2ePub GUI utility
* Fixed installer so now .net and VCresdist are called with minimal user prompt (passive mode)
* Moved registration of shell extension from RegisterFb2ePub.exe to installer, as result removed RegisterFb2ePub.exe completely
* Removed self registration code from shell extension DLL
* Reverted back to .Net 4.0 Client to continue XP support
* Fixed 64bit install to install 32 version of VCRT as well in order to support FBE extension

1.1.1